chore: fix webmentions overflowing

--- a/sass/_post.scss
+++ b/sass/_post.scss
@@ -158,3 +158,8 @@
   padding: 1em;
   margin: 2em 0;
 }
+
+.webmention {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
